improve server and diagram editor

--- a/diageditor.html
+++ b/diageditor.html
@@ -16,10 +16,11 @@ Relationship(admin, bastion, "SSH")
   <div id="diagram"></div>
 
   <script type="module">
-    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    import mermaidC4 from 'https://unpkg.com/mermaid-c4-plugin@1.29.0/dist/index.esm.min.mjs';
 
     mermaid.initialize({ startOnLoad: false, theme: 'default', securityLevel: 'strict' });
-    //mermaid.use({ c4: mermaidC4 });
+    mermaid.use({ c4: mermaidC4 });
 
     const editor = document.getElementById('editor');
     const diagram = document.getElementById('diagram');
@@ -32,20 +33,34 @@ Relationship(admin, bastion, "SSH")
       });
     });
 
-    saveBtn.addEventListener('click', async () => {
-      const pw = prompt('Enter password:');
-      const auth = btoa(`admin:${pw}`);
-      const resp = await fetch('/save', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'text/plain',
-          'Authorization': `Basic ${auth}`
-        },
-        body: editor.value
-      });
+    /* FROM HERE */
+saveBtn.addEventListener('click', async () => {
+  let pw = localStorage.getItem('PASSWORD') || '';
+  const attemptSave = async (password) => {
+    const auth = btoa(`admin:${password}`);
+    const resp = await fetch('/save', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'text/plain',
+        'Authorization': `Basic ${auth}`
+      },
+      body: editor.value
+    });
+    return resp;
+  };
+
+  let resp = await attemptSave(pw);
+  if (resp.status === 401) {
+    pw = prompt('Save failed, please enter password:');
+    localStorage.setItem('PASSWORD', pw);
+    resp = await attemptSave(pw);
+  }
+
+  alert(await resp.text());
+});
+/* TO HERE */
       alert(await resp.text());
     });
-    
   </script>
 </body>
 </html>
