First working graph generation

--- a/xmvn-graph.html
+++ b/xmvn-graph.html
@@ -86,16 +86,11 @@ let DATA = /* XMVN_DATA_START */ {
     { "key": "web_parent", "source": "proj_web", "target": "parent_acme", "attributes": { "size": 1, "color": "#7f7f7f" }, "meta": { "edgeType": "parent" } }
   ]
 } /* XMVN_DATA_END */;
+
 const state = {
   hoveredNode: null,
   hoveredNeighbors: null,
-  dragging: false,
-  filters: {
-    project: true,
-    lib: true,
-    bom: true,
-    parent: true
-  }
+  isDragging: false
 };
 
 main();
@@ -108,12 +103,11 @@ function main() {
   setupStats(graph);
   const renderer = new Sigma(graph, container, {
     renderEdgeLabels: true,
-    minZoomRatio: 0.1, // Minimum zoom-out (smaller value = zoom out more)
-    maxZoomRatio: 10,  // Maximum zoom-in (higher value = zoom in more)
-    nodeProgramClasses: {
-      image: createNodeImageProgram()
-    }
+    minZoomRatio: 0.1,
+    maxZoomRatio: 10,
+    nodeProgramClasses: { image: createNodeImageProgram() }
   });
+
   setupHoverHighlight(graph, renderer);
   setupCamera(renderer);
   setupNodeDragging(renderer, graph);
@@ -138,41 +132,50 @@ function setupCamera(renderer) {
 
 function setupHoverHighlight(graph, renderer) {
   renderer.setSetting("nodeReducer", (node, data) => {
-    const res = { ...data };
-    if (state.hoveredNode && node !== state.hoveredNode && !state.hoveredNeighbors.has(node)) {
-      res.color = "#f2f2f2";
-      res.label = "";
-    }
-    return res;
-  });
-  renderer.setSetting("edgeReducer", (edge, data) => {
-    if (!state.hoveredNode) return data;
-    const s = graph.source(edge), t = graph.target(edge);
-    if (s !== state.hoveredNode && t !== state.hoveredNode) {
-      return { ...data, hidden: true };
+    if (data.hidden) return data;
+    if (state.isDragging) return data;
+    if (state.hoveredNode && node !== state.hoveredNode && !state.hoveredNeighbors?.has(node)) {
+      return { ...data, color: "#f2f2f2", label: "" };
     }
     return data;
   });
+
+  renderer.setSetting("edgeReducer", (edge, data) => {
+    if (data.hidden) return data;
+    if (state.isDragging) return data;
+    if (state.hoveredNode) {
+      const s = graph.source(edge), t = graph.target(edge);
+      if (s !== state.hoveredNode && t !== state.hoveredNode) {
+        return { ...data, hidden: true };
+      }
+    }
+    return data;
+  });
+
   renderer.on("enterNode", ({ node }) => {
+    if (state.isDragging) return;
     state.hoveredNode = node;
     state.hoveredNeighbors = new Set(graph.neighbors(node));
     renderer.refresh({ skipIndexation: true });
   });
   renderer.on("leaveNode", () => {
+    if (state.isDragging) return;
     state.hoveredNode = null;
     state.hoveredNeighbors = null;
     renderer.refresh({ skipIndexation: true });
   });
 }
+
 function setupNodeDragging(renderer, graph) {
   let draggedNode = null;
-  let isDragging = false;
   let dragOffset = { x: 0, y: 0 };
 
   renderer.on("downNode", ({ node, event }) => {
+    state.isDragging = true;
+    state.hoveredNode = null;
+    state.hoveredNeighbors = null;
+    renderer.refresh({ skipIndexation: true });
     draggedNode = node;
-    isDragging = true;
-    // Calculate offset between node and mouse
     const attrs = graph.getNodeAttributes(node);
     const rect = renderer.getContainer().getBoundingClientRect();
     const mx = event.original.clientX - rect.left;
@@ -188,7 +191,7 @@ function setupNodeDragging(renderer, graph) {
   });
 
   function handleMove(e) {
-    if (!isDragging || !draggedNode) return;
+    if (!state.isDragging || !draggedNode) return;
     e.preventDefault();
     e.stopPropagation();
     const rect = renderer.getContainer().getBoundingClientRect();
@@ -200,17 +203,15 @@ function setupNodeDragging(renderer, graph) {
   }
 
   function handleUp(e) {
-    if (isDragging) {
-      isDragging = false;
+    if (state.isDragging) {
+      state.isDragging = false;
       draggedNode = null;
       dragOffset = { x: 0, y: 0 };
       e.preventDefault();
       e.stopPropagation();
-
-      // --- Key fix for sticky camera ---
-      // Dispatch a fake mouseup event to the canvas to end any panning
       const evt = new MouseEvent("mouseup", { bubbles: true, cancelable: true, view: window });
       renderer.getContainer().dispatchEvent(evt);
+      renderer.refresh({ skipIndexation: true });
     }
   }
 
@@ -219,41 +220,46 @@ function setupNodeDragging(renderer, graph) {
   renderer.getContainer().addEventListener("mouseleave", handleUp, { passive: false });
 }
 
-function setupFilters(graph, renderer) {
+function setupFilters(graph) {
   const $ = (id) => document.getElementById(id);
-  const types = ["project", "lib", "bom", "parent"];
-
-  types.forEach(type => {
-    $(`f-${type}s`).addEventListener("change", () => {
-      state.filters[type] = $(`f-${type}s`).checked;
-      renderer.refresh();
+  const fProjects = $("f-projects");
+  const fLibs = $("f-libs");
+  const fBoms = $("f-boms");
+  const fParent = $("f-parent");
+  function nodeMatchesFilters(attrs) {
+    const t = attrs.meta?.nodeType;
+    if (!t) return true;
+    return (
+      (t === "project" && fProjects.checked) ||
+      (t === "lib"     && fLibs.checked)     ||
+      (t === "bom"     && fBoms.checked)     ||
+      (t === "parent"  && fParent.checked)
+    );
+  }
+  function edgeMatchesFilters(attrs, s, t) {
+    const et = attrs.meta?.edgeType;
+    let allowedByType = true;
+    if (et) {
+      allowedByType =
+        (et === "project-link" && fProjects.checked) ||
+        (et === "lib"          && fLibs.checked)     ||
+        (et === "bom-import"   && fBoms.checked)     ||
+        (et === "parent"       && fParent.checked);
+    }
+    const srcHidden = graph.getNodeAttribute(s, "hidden") === true;
+    const tgtHidden = graph.getNodeAttribute(t, "hidden") === true;
+    return allowedByType && !srcHidden && !tgtHidden;
+  }
+  function applyFilters() {
+    graph.forEachNode((n, attrs) => {
+      graph.setNodeAttribute(n, "hidden", !nodeMatchesFilters(attrs));
     });
-  });
-
-  renderer.setSetting("nodeReducer", (node, data) => {
-    // Filter node
-    const type = data.meta?.nodeType;
-    if (!state.filters[type]) return { ...data, hidden: true };
-
-    // Hover logic (only if not dragging)
-    if (!state.dragging && state.hoveredNode && node !== state.hoveredNode && !state.hoveredNeighbors.has(node))
-      return { ...data, color: "#f2f2f2", label: "" };
-
-    return data;
-  });
-
-  renderer.setSetting("edgeReducer", (edge, data) => {
-    // Filter edge by type and endpoints
-    const meta = data.meta || {};
-    if (!state.filters[meta.edgeType?.replace(/-.*$/, "")]) return { ...data, hidden: true };
-    const s = graph.source(edge), t = graph.target(edge);
-    if (!state.filters[graph.getNodeAttribute(s, "meta")?.nodeType] || !state.filters[graph.getNodeAttribute(t, "meta")?.nodeType])
-      return { ...data, hidden: true };
-    // Hover logic (only if not dragging)
-    if (!state.dragging && state.hoveredNode && s !== state.hoveredNode && t !== state.hoveredNode)
-      return { ...data, hidden: true };
-    return data;
-  });
+    graph.forEachEdge((e, attrs, s, t) => {
+      graph.setEdgeAttribute(e, "hidden", !edgeMatchesFilters(attrs, s, t));
+    });
+  }
+  [fProjects, fLibs, fBoms, fParent].forEach(cb => cb.addEventListener("change", applyFilters));
+  applyFilters();
 }
 
 function setupLayouts(graph) {
