--- a/xmvn-graph.html
+++ b/xmvn-graph.html
@@ -24,6 +24,7 @@
   <div id="topbar">
     <strong>XMvn Graph</strong>
     <span class="badge" id="stats">0 nodes • 0 edges</span>
+    <span class="badge" id="log" style="background:#ffe5b2; color:#b36d00; margin-left:8px"></span>
 
     <fieldset>
       <legend>Filter</legend>
@@ -124,6 +125,48 @@ function setupStats(graph) {
   updateStats();
 }
 
+function setupFilters(graph) {
+  const $ = (id) => document.getElementById(id);
+  const fProjects = $("f-projects");
+  const fLibs = $("f-libs");
+  const fBoms = $("f-boms");
+  const fParent = $("f-parent");
+  function nodeMatchesFilters(attrs) {
+    const t = attrs.meta?.nodeType;
+    if (!t) return true;
+    return (
+      (t === "project" && fProjects.checked) ||
+      (t === "lib"     && fLibs.checked)     ||
+      (t === "bom"     && fBoms.checked)     ||
+      (t === "parent"  && fParent.checked)
+    );
+  }
+  function edgeMatchesFilters(attrs, s, t) {
+    const et = attrs.meta?.edgeType;
+    let allowedByType = true;
+    if (et) {
+      allowedByType =
+        (et === "project-link" && fProjects.checked) ||
+        (et === "lib"          && fLibs.checked)     ||
+        (et === "bom-import"   && fBoms.checked)     ||
+        (et === "parent"       && fParent.checked);
+    }
+    const srcHidden = graph.getNodeAttribute(s, "hidden") === true;
+    const tgtHidden = graph.getNodeAttribute(t, "hidden") === true;
+    return allowedByType && !srcHidden && !tgtHidden;
+  }
+  function applyFilters() {
+    graph.forEachNode((n, attrs) => {
+      graph.setNodeAttribute(n, "hidden", !nodeMatchesFilters(attrs));
+    });
+    graph.forEachEdge((e, attrs, s, t) => {
+      graph.setEdgeAttribute(e, "hidden", !edgeMatchesFilters(attrs, s, t));
+    });
+  }
+  [fProjects, fLibs, fBoms, fParent].forEach(cb => cb.addEventListener("change", applyFilters));
+  applyFilters();
+}
+
 function setupCamera(renderer) {
   document.getElementById("reset-camera").addEventListener("click", () => {
     renderer.getCamera().animatedReset({ duration: 300 });
@@ -218,48 +261,6 @@ function setupNodeDragging(renderer, graph) {
   renderer.getContainer().addEventListener("mousemove", handleMove, { passive: false });
   renderer.getContainer().addEventListener("mouseup", handleUp, { passive: false });
   renderer.getContainer().addEventListener("mouseleave", handleUp, { passive: false });
-}
-
-function setupFilters(graph) {
-  const $ = (id) => document.getElementById(id);
-  const fProjects = $("f-projects");
-  const fLibs = $("f-libs");
-  const fBoms = $("f-boms");
-  const fParent = $("f-parent");
-  function nodeMatchesFilters(attrs) {
-    const t = attrs.meta?.nodeType;
-    if (!t) return true;
-    return (
-      (t === "project" && fProjects.checked) ||
-      (t === "lib"     && fLibs.checked)     ||
-      (t === "bom"     && fBoms.checked)     ||
-      (t === "parent"  && fParent.checked)
-    );
-  }
-  function edgeMatchesFilters(attrs, s, t) {
-    const et = attrs.meta?.edgeType;
-    let allowedByType = true;
-    if (et) {
-      allowedByType =
-        (et === "project-link" && fProjects.checked) ||
-        (et === "lib"          && fLibs.checked)     ||
-        (et === "bom-import"   && fBoms.checked)     ||
-        (et === "parent"       && fParent.checked);
-    }
-    const srcHidden = graph.getNodeAttribute(s, "hidden") === true;
-    const tgtHidden = graph.getNodeAttribute(t, "hidden") === true;
-    return allowedByType && !srcHidden && !tgtHidden;
-  }
-  function applyFilters() {
-    graph.forEachNode((n, attrs) => {
-      graph.setNodeAttribute(n, "hidden", !nodeMatchesFilters(attrs));
-    });
-    graph.forEachEdge((e, attrs, s, t) => {
-      graph.setEdgeAttribute(e, "hidden", !edgeMatchesFilters(attrs, s, t));
-    });
-  }
-  [fProjects, fLibs, fBoms, fParent].forEach(cb => cb.addEventListener("change", applyFilters));
-  applyFilters();
 }
 
 function setupLayouts(graph) {
